handle lack of rep, fix layout jumps upon navigation

--- a/src/app/components/account-details/account-details.component.css
+++ b/src/app/components/account-details/account-details.component.css
@@ -87,6 +87,8 @@
     padding-bottom: 1px;
     text-transform: uppercase;
     color: #FFF;
+    margin-top: -3px;
+    margin-bottom: -3px;
 }
 
 .incoming-label > .text-full {
