--- a/src/less/nault-theme.less
+++ b/src/less/nault-theme.less
@@ -34,8 +34,10 @@ h1, h2, h3, h4, h5, .uk-text-lead, .uk-button, .uk-alert, .uk-description-list d
 }
 
 .uk-panel-scrollable {
+    overflow-x: auto;
+    overflow-y: scroll;
     resize: none;
-  }
+}
 
 .uk-card-body > ul > li > a {
 	color: @global-color;
